--- a/client/index.html
+++ b/client/index.html
@@ -32,16 +32,16 @@
 
           <div id="user-menu-container" class="flex items-center space-x-2">
             <div id="guest-buttons" class="flex items-center space-x-2">
-              <a href="/admin.html">
+              <a href="./admin.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user-round-icon lucide-circle-user-round text-blue-600"><path d="M18 20a6 6 0 0 0-12 0"/><circle cx="12" cy="10" r="4"/><circle cx="12" cy="12" r="10"/></svg>
               </a>
               <button
                 class="px-4 py-2 text-blue-600 hover:text-blue-700 font-medium transition-colors">
-                <a href="/login.html">Login</a>
+                <a href="./login.html">Login</a>
               </button>
               <button 
                 class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
-                <a href="/signup.html">Sign Up</a>
+                <a href="./signup.html">Sign Up</a>
               </button>
               
             </div>
