--- a/client/login.html
+++ b/client/login.html
@@ -10,7 +10,7 @@
   <div class="bg-white border border-gray-300 rounded-lg shadow-lg w-full max-w-md p-6">
     <div class="flex justify-between items-center mb-6">
       <h2 class="text-2xl font-bold text-gray-900">Login</h2>
-      <button class="text-gray-400 hover:text-gray-600"><a href="/index.html">✖️</a></button>
+      <button class="text-gray-400 hover:text-gray-600"><a href="./index.html">✖️</a></button>
     </div>
 
     <div id="login-error" class="hidden bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded mb-4">
@@ -39,7 +39,7 @@
 
     <div class="mt-4 text-center">
       <span class="text-gray-600">Don't have an account? </span>
-      <button  class="text-blue-600 hover:text-blue-700 font-medium"><a href="/signup.html">Sign up</a></button>
+      <button  class="text-blue-600 hover:text-blue-700 font-medium"><a href="./signup.html">Sign up</a></button>
     </div>
   </div>
 
