--- a/client/login.html
+++ b/client/login.html
@@ -3,45 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
+  <title>Login | Buy & Sell</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white border border-gray-300 rounded-lg shadow-lg w-full max-w-md p-6">
-    <div class="flex justify-between items-center mb-6">
-      <h2 class="text-2xl font-bold text-gray-900">Login</h2>
-      <button class="text-gray-400 hover:text-gray-600"><a href="./index.html">✖️</a></button>
-    </div>
+<body class="h-screen flex flex-col">
 
-    <div id="login-error" class="hidden bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded mb-4">
-      Invalid email or password
-    </div>
+  <!-- Navbar -->
+  <nav class="bg-white/5 backdrop-blur-md border-b border-white/10 fixed w-full z-50">
+  <div class="container mx-auto px-4">
+    <div class="flex justify-between items-center h-16">
 
-    <form onsubmit="handleLogin(event)">
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-        <div class="relative">
-          <input type="email" name="email" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter your email" required />
+      <!-- Logo + Title -->
+      <div class="flex items-center space-x-3">
+        <div class="bg-white/10 p-2 rounded-xl border border-white/20">
+          <svg class="h-7 w-7 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
+            <circle cx="7" cy="17" r="2"/><path d="M9 17h6"/><circle cx="17" cy="17" r="2"/>
+          </svg>
         </div>
+        <span class="text-xl font-bold text-white drop-shadow-lg">Buy & Sell</span>
       </div>
 
-      <div class="mb-6">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Password</label>
-        <div class="relative">
-          <input type="password" name="password" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Enter your password" required />
-        </div>
-      </div>
-
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
-        Login
-      </button>
-    </form>
-
-    <div class="mt-4 text-center">
-      <span class="text-gray-600">Don't have an account? </span>
-      <button  class="text-blue-600 hover:text-blue-700 font-medium"><a href="./signup.html">Sign up</a></button>
+      <!-- Close Button -->
+      <a href="./index.html" 
+         class="bg-white/10 border border-white/20 hover:bg-white/20 text-white px-3 py-1 rounded-xl transition">
+        ✖
+      </a>
     </div>
   </div>
+</nav>
+
+  <!-- Background Video -->
+  <section class="relative flex-1 flex items-center justify-center overflow-hidden">
+    <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-[-1]">
+      <source src="MUSTANG.mp4" type="video/mp4" />
+    </video>
+    <div class="absolute inset-0 bg-black/50 z-[-1]"></div>
+
+    <!-- Login Card -->
+    <div class="bg-white/10 backdrop-blur-md border border-white/20 rounded-2xl shadow-xl w-full max-w-md p-8 text-white">
+      <h2 class="text-3xl font-bold text-center mb-6">Login</h2>
+
+      <div id="login-error" class="hidden bg-red-500/20 border border-red-400 text-red-200 px-4 py-3 rounded mb-4 text-center">
+        Invalid email or password
+      </div>
+
+      <form onsubmit="handleLogin(event)">
+        <div class="mb-4">
+          <label class="block text-sm font-semibold mb-2">Email</label>
+          <input type="email" name="email" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-transparent text-gray-900" placeholder="Enter your email" required />
+        </div>
+
+        <div class="mb-6">
+          <label class="block text-sm font-semibold mb-2">Password</label>
+          <input type="password" name="password" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:border-transparent text-gray-900" placeholder="Enter your password" required />
+        </div>
+
+        <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
+          Login
+        </button>
+      </form>
+
+      <div class="mt-6 text-center">
+        <span class="text-gray-200">Don't have an account? </span>
+        <a href="./signup.html" class="text-blue-400 hover:text-blue-300 font-semibold">Sign up</a>
+      </div>
+    </div>
+  </section>
 
   <script>
     function handleLogin(e) {
