--- a/client/signup.html
+++ b/client/signup.html
@@ -3,54 +3,106 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup Page</title>
+  <title>Sign Up | Buy & Sell</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white border border-gray-300 rounded-lg shadow-lg w-full max-w-md p-6 overflow-y-auto">
-    <div class="flex justify-between items-center mb-6">
-      <h2 class="text-2xl font-bold text-gray-900">Sign Up</h2>
-      <button  class="text-gray-400 hover:text-gray-600"><a href="./index.html">✖️</a></button>
+<body class="h-screen flex flex-col">
+
+  <!-- Navbar (same as login page) -->
+  <nav class="absolute top-0 left-0 w-full bg-white/10 backdrop-blur-md border-b border-white/20 z-10">
+    <div class="max-w-7xl mx-auto px-4">
+      <div class="flex justify-between items-center h-16">
+        <!-- Logo + Title -->
+        <div class="flex items-center space-x-3">
+          <div class="bg-white/20 p-2 rounded-xl">
+            <svg class="h-7 w-7 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
+              <circle cx="7" cy="17" r="2"/><path d="M9 17h6"/><circle cx="17" cy="17" r="2"/>
+            </svg>
+          </div>
+          <span class="text-xl font-bold text-white">Buy & Sell</span>
+        </div>
+
+        <!-- Close Button -->
+        <a href="./index.html" 
+           class="bg-white/20 hover:bg-white/30 text-white px-3 py-1 rounded-xl transition">
+          ✖
+        </a>
+      </div>
     </div>
+  </nav>
 
-    <div id="signup-error" class="hidden bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded mb-4"></div>
+  <!-- Background Video -->
+  <section class="relative flex-1 flex items-center justify-center overflow-hidden">
+    <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-[-1]">
+      <source src="MUSTANG.mp4" type="video/mp4" />
+    </video>
+    <div class="absolute inset-0 bg-black/50 z-[-1]"></div>
 
-    <form onsubmit="handleSignup(event)">
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Full Name</label>
-        <input type="text" name="name" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" placeholder="Enter your full name" required>
+    <!-- Signup Glass Card -->
+    <div class="bg-white/10 backdrop-blur-xl border border-white/20 rounded-2xl shadow-2xl 
+                w-full max-w-md p-8 text-white overflow-y-auto mt-20">
+      <h2 class="text-3xl font-bold text-center mb-6">Sign Up</h2>
+
+      <div id="signup-error" 
+           class="hidden bg-red-500/20 border border-red-400 text-red-200 px-4 py-3 rounded mb-4 text-center">
       </div>
 
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-        <input type="email" name="email" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" placeholder="Enter your email" required>
+      <form onsubmit="handleSignup(event)">
+        <div class="mb-4">
+          <label class="block text-sm font-semibold mb-2">Full Name</label>
+          <input type="text" name="name" 
+                 class="w-full px-4 py-2 rounded-lg bg-white/20 border border-white/30 
+                        focus:ring-2 focus:ring-blue-400 text-white placeholder-gray-300" 
+                 placeholder="Enter your full name" required>
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-semibold mb-2">Email</label>
+          <input type="email" name="email" 
+                 class="w-full px-4 py-2 rounded-lg bg-white/20 border border-white/30 
+                        focus:ring-2 focus:ring-blue-400 text-white placeholder-gray-300" 
+                 placeholder="Enter your email" required>
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-semibold mb-2">Phone Number</label>
+          <input type="tel" name="phone" 
+                 class="w-full px-4 py-2 rounded-lg bg-white/20 border border-white/30 
+                        focus:ring-2 focus:ring-blue-400 text-white placeholder-gray-300" 
+                 placeholder="Enter your phone number" required>
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-semibold mb-2">Password</label>
+          <input type="password" name="password" 
+                 class="w-full px-4 py-2 rounded-lg bg-white/20 border border-white/30 
+                        focus:ring-2 focus:ring-blue-400 text-white placeholder-gray-300" 
+                 placeholder="Create a password" required>
+        </div>
+
+        <div class="mb-6">
+          <label class="block text-sm font-semibold mb-2">Confirm Password</label>
+          <input type="password" name="confirmPassword" 
+                 class="w-full px-4 py-2 rounded-lg bg-white/20 border border-white/30 
+                        focus:ring-2 focus:ring-blue-400 text-white placeholder-gray-300" 
+                 placeholder="Confirm your password" required>
+        </div>
+
+        <button type="submit" 
+                class="w-full bg-blue-600/80 hover:bg-blue-700/90 text-white py-2 px-4 
+                       rounded-lg transition-colors">
+          Sign Up
+        </button>
+      </form>
+
+      <div class="mt-6 text-center">
+        <span class="text-gray-200">Already have an account? </span>
+        <a href="./login.html" class="text-blue-400 hover:text-blue-300 font-semibold">Login</a>
       </div>
-
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Phone Number</label>
-        <input type="tel" name="phone" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" placeholder="Enter your phone number" required>
-      </div>
-
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Password</label>
-        <input type="password" name="password" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" placeholder="Create a password" required>
-      </div>
-
-      <div class="mb-6">
-        <label class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
-        <input type="password" name="confirmPassword" class="w-full pl-4 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500" placeholder="Confirm your password" required>
-      </div>
-
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors">
-        Sign Up
-      </button>
-    </form>
-
-    <div class="mt-4 text-center">
-      <span class="text-gray-600">Already have an account? </span>
-      <button class="text-blue-600 hover:text-blue-700 font-medium"><a href="./login.html">Login</a></button>
     </div>
-  </div>
+  </section>
 
   <script>
     function handleSignup(e) {
@@ -62,18 +114,9 @@
       const password = form.password.value;
       const confirmPassword = form.confirmPassword.value;
 
-      const errorBox = document.getElementById('signup-error');
-      errorBox.classList.add('hidden');
-      errorBox.innerText = '';
-
-      if (password !== confirmPassword) {
-        errorBox.innerText = 'Passwords do not match';
-        errorBox.classList.remove('hidden');
-        return;
+      if(password !== confirmPassword) {
+        return alert('Password Missmatch');
       }
-
-      // Dummy success behavior
-      alert('Account created successfully!');
     }
   </script>
 </body>
