--- a/client/index.html
+++ b/client/index.html
@@ -104,12 +104,13 @@
     </div>
 
     <div id="vehicle-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <!-- Vehicle cards injected by script.js -->
+      <!-- Vehicle cards injected by script -->
     </div>
   </main>
 
   <script>
     window.addEventListener('DOMContentLoaded', async () => {
+      loadVehicles();
       const token = localStorage.getItem('token');
       const loginBtn = document.getElementById('login-btn');
       const signupBtn = document.getElementById('signup-btn');
@@ -139,6 +140,60 @@
         }
       }
     });
+
+    async function loadVehicles() {
+      try {
+        const res = await axios.get("http://localhost:5000/api/vehicles");
+        if (res.data.success) {
+          const vehicles = res.data.data;
+          const grid = document.getElementById("vehicle-grid");
+          grid.innerHTML = "";
+
+          if (!vehicles || vehicles.length === 0) {
+            grid.innerHTML = `
+              <div class="col-span-full text-center text-gray-300 text-lg py-10">
+                🚗 No vehicles found
+              </div>
+            `;
+            return;
+          }
+
+          vehicles.forEach(vehicle => {
+            const card = document.createElement("div");
+            card.className =
+              "bg-white/10 backdrop-blur-md rounded-xl shadow-lg overflow-hidden hover:scale-105 transform transition cursor-pointer";
+
+            card.innerHTML = `
+              <img src="${vehicle.image || './placeholder-car.jpg'}" 
+                  alt="${vehicle.title}" 
+                  class="w-full h-48 object-cover" />
+
+              <div class="p-4">
+                <h3 class="text-xl font-semibold text-white">${vehicle.title}</h3>
+                <p class="text-gray-300">Year: ${vehicle.year}</p>
+                <p class="text-blue-400 font-bold mt-2">₹ ${vehicle.price.toLocaleString()}</p>
+              </div>
+            `;
+
+            // redirect on click
+            card.addEventListener("click", () => {
+              window.location.href = `./vehicle-details.html?id=${vehicle.id}`;
+            });
+
+            grid.appendChild(card);
+          });
+        }
+      } catch (err) {
+        console.error("Error fetching vehicles:", err);
+        const grid = document.getElementById("vehicle-grid");
+        grid.innerHTML = `
+          <div class="col-span-full text-center text-red-400 text-lg py-10">
+            ⚠️ Failed to load vehicles
+          </div>
+        `;
+      }
+    }
+
   </script>
 </body>
 </html>
