--- a/client/profile.html
+++ b/client/profile.html
@@ -152,7 +152,7 @@
       } catch (error) {
         console.error('Error fetching profile:', error);
         alert("Session expired, please login again!");
-        location.href = "./login.html";
+        // location.href = "./login.html";
       }
     });
 
