--- a/client/vehicle-details.html
+++ b/client/vehicle-details.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: url(./MUSTANG.mp4) no-repeat center center fixed;
+      background: url('./MUSTANG.mp4') no-repeat center center fixed;
       background-size: cover;
     }
     .glass {
@@ -23,7 +23,10 @@
   </style>
 </head>
 <body class="flex items-center justify-center min-h-screen text-white">
-
+  <!-- Background Video -->
+  <video autoplay muted loop id="bg-video" class="fixed top-0 left-0 w-full h-full object-cover -z-10">
+    <source src="./MUSTANG.mp4" type="video/mp4">
+  </video>
   <!-- Container -->
   <div id="vehicleDetails" class="glass max-w-4xl w-full p-6 shadow-xl">
     <h1 class="text-3xl font-bold mb-6 text-center text-red-500">Vehicle Details</h1>
@@ -35,6 +38,25 @@
       <button id="favBtn" class="bg-blue-600 px-5 py-2 rounded-lg hover:bg-blue-700 transition">
         ⭐ Add to Favorites
       </button>
+      <button id="buyBtn" class="bg-green-600 px-5 py-2 rounded-lg hover:bg-green-700 transition">
+        🛒 Buy vehicle
+      </button>
+    </div>
+  </div>
+
+  <!-- Buy Modal -->
+  <div id="buyModal" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-2xl shadow-lg w-full max-w-md p-6 relative text-black">
+      <h2 class="text-xl font-bold mb-4">Send Purchase Request</h2>
+
+      <textarea id="buyMessage" rows="4" 
+        placeholder="Write your message/request here..."
+        class="w-full px-4 py-2 border rounded-lg focus:ring focus:ring-green-400 mb-4"></textarea>
+
+      <div class="flex justify-end space-x-3">
+        <button id="cancelBuy" class="px-4 py-2 bg-gray-300 rounded-lg hover:bg-gray-400">Cancel</button>
+        <button id="sendBuy" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">Send</button>
+      </div>
     </div>
   </div>
 
@@ -93,6 +115,46 @@
       } catch (err) {
         console.error("Error adding favorite:", err);
         alert("Failed to add favorite.");
+      }
+    });
+
+    // Buy button → open modal
+    document.getElementById("buyBtn").addEventListener("click", () => {
+      document.getElementById("buyModal").classList.remove("hidden");
+    });
+
+    // Cancel buy → close modal
+    document.getElementById("cancelBuy").addEventListener("click", () => {
+      document.getElementById("buyModal").classList.add("hidden");
+    });
+
+    // Send buy request
+    document.getElementById("sendBuy").addEventListener("click", async () => {
+      if (!token) {
+        alert("Please login to send a purchase request!");
+        window.location.href = "./login.html";
+        return;
+      }
+
+      const message = document.getElementById("buyMessage").value.trim();
+      if (!message) {
+        alert("Please enter a message before sending!");
+        return;
+      }
+
+      try {
+        const res = await axios.post(
+          "http://localhost:5000/api/requests/send",
+          { vehicle_id: vehicleId, message },
+          { headers: { Authorization: `Bearer ${token}` } }
+        );
+
+        alert(res.data.message || "Request sent successfully!");
+        document.getElementById("buyModal").classList.add("hidden");
+        document.getElementById("buyMessage").value = "";
+      } catch (err) {
+        console.error("Error sending request:", err);
+        alert("Failed to send request.");
       }
     });
 
