--- a/client/profile.html
+++ b/client/profile.html
@@ -85,6 +85,12 @@
       <h3 class="text-xl font-bold text-white mb-4">⭐ Favorites</h3>
       <div id="favoritesList" class="grid gap-4 md:grid-cols-2"></div>
     </section>
+
+    <!-- Requests Section -->
+    <section id="requests" class="mt-12 max-w-4xl mx-auto bg-white/10 backdrop-blur-md border border-white/20 rounded-2xl shadow-lg p-6">
+      <h3 class="text-xl font-bold text-white mb-4">📩 My Requests</h3>
+      <div id="requestsList" class="grid gap-4 md:grid-cols-2"></div>
+    </section>
   </main>
 
   <!-- Edit Modal -->
@@ -137,51 +143,20 @@
         });
         if (favRes.data.success) renderVehicles(favRes.data.data, "favoritesList");
 
+        // Fetch requests
+        const reqRes = await axios.get('http://localhost:5000/api/requests/my-requests', {
+          headers: { Authorization: `Bearer ${token}` }
+        });
+        if (reqRes.data.success) renderRequests(reqRes.data.data, "requestsList");
+
       } catch (error) {
         console.error('Error fetching profile or favorites:', error);
         alert("Session expired, please login again!");
-        // window.location.href = "./login.html";
+        window.location.href = "./login.html";
       }
-    });window.addEventListener('DOMContentLoaded', async () => {
-  const token = localStorage.getItem('token');
-  console.log("Token found in localStorage:", token); // 👀 Debug
-
-  if (!token) {
-    alert("No token found, please login again!");
-    return (window.location.href = "./login.html");
-  }
-
-  try {
-    const res = await axios.get('http://localhost:5000/api/users/profile', {
-      headers: { Authorization: `Bearer ${token}` }
     });
 
-    console.log("Profile response:", res.data); // 👀 Debug
-
-    if (res.data.success) {
-      userData = res.data.data;
-      const { fullname, email, phone } = userData;
-
-      document.getElementById('fullname').innerText = fullname;
-      document.getElementById('email').innerText = email;
-      document.getElementById('phone').innerText = phone;
-    } else {
-      alert("Session expired, please login again!");
-      window.location.href = "./login.html";
-    }
-  } catch (error) {
-    console.error("Error fetching profile:", error.response?.data || error.message);
-
-    if (error.response?.status === 401) {
-      alert("Unauthorized: Session expired, please login again!");
-      window.location.href = "./login.html";
-    } else {
-      alert("Server error fetching profile.");
-    }
-  }
-});
-
-    // Render vehicles function
+    // Render favorites
     function renderVehicles(vehicles, containerId) {
       const container = document.getElementById(containerId);
       container.innerHTML = vehicles.length ? "" : "<p class='text-gray-300'>No favorite vehicles found.</p>";
@@ -190,7 +165,7 @@
         const card = document.createElement("div");
         card.className = "bg-blue-900/20 rounded-lg p-4 shadow-md hover:scale-105 transform transition flex justify-center flex-col";
         card.innerHTML = `
-          <img src="${v.image}" />
+          <img src="${v.image}" class="rounded-lg mb-2"/>
           <h4 class="text-lg font-bold text-white">${v.title}</h4>
           <p class="text-gray-300">${v.year} • ₹${v.price}</p>
           <p class="text-white">${v.description}</p>
@@ -202,6 +177,31 @@
       });
     }
 
+    // Render requests with delete button
+    function renderRequests(requests, containerId) {
+      const container = document.getElementById(containerId);
+      container.innerHTML = requests.length ? "" : "<p class='text-gray-300'>No requests submitted yet.</p>";
+
+      requests.forEach(r => {
+        const card = document.createElement("div");
+        card.className = "bg-green-900/20 rounded-lg p-4 shadow-md hover:scale-105 transform transition flex flex-col";
+        card.innerHTML = `
+          <img src="${r.image}" class="rounded-lg mb-2"/>
+          <h4 class="text-lg font-bold text-white">${r.title}</h4>
+          <p class="text-gray-300">${r.year} • ₹${r.price}</p>
+          <p class="text-white">${r.description}</p>
+          <p class="text-white">Location: ${r.location}</p>
+          <p class="text-white">Top Speed: ${r.top_speed}</p>
+          <hr class="my-2 border-gray-600"/>
+          <p class="text-sm text-yellow-300"><strong>Message:</strong> ${r.message}</p>
+          <p class="text-sm text-blue-300"><strong>Contact:</strong> ${r.contact}</p>
+          <button onclick="deleteRequest(${r.request_id})" class="mt-3 bg-red-600 text-white rounded-lg px-3 py-1 hover:bg-red-700">Delete</button>
+        `;
+        container.appendChild(card);
+      });
+    }
+
+    // Remove favorite
     async function removeFavorite(id) {
       const token = localStorage.getItem('token');
       try {
@@ -213,7 +213,29 @@
           window.location.reload();
         } 
       } catch (error) {
-        alert('error occured'+ error)
+        alert('Error occurred: ' + error)
+      }
+    }
+
+    // Delete request
+    async function deleteRequest(id) {
+      const token = localStorage.getItem('token');
+      if (!confirm("Are you sure you want to delete this request?")) return;
+
+      try {
+        const res = await axios.delete(`http://localhost:5000/api/requests/delete/${id}`, {
+          headers: { Authorization: `Bearer ${token}` }
+        });
+
+        if (res.data.success) {
+          alert("✅ Request deleted!");
+          window.location.reload();
+        } else {
+          alert("❌ Failed to delete request.");
+        }
+      } catch (err) {
+        console.error("Error deleting request:", err.response?.data || err.message);
+        alert("❌ Error deleting request.");
       }
     }
 
