--- a/client/index.html
+++ b/client/index.html
@@ -11,40 +11,43 @@
 
   <!-- Navbar -->
   <nav class="absolute top-0 left-0 w-full z-20 bg-white/10 backdrop-blur-md border-b border-white/20">
-  <div class="container mx-auto px-6">
-    <div class="flex justify-between items-center h-16">
+    <div class="container mx-auto px-6">
+      <div class="flex justify-between items-center h-16">
 
-      <!-- Logo -->
-      <div class="flex items-center space-x-2">
-        <svg class="h-8 w-8 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
-          <circle cx="7" cy="17" r="2"/>
-          <path d="M9 17h6"/>
-          <circle cx="17" cy="17" r="2"/>
-        </svg>
-        <span class="text-2xl font-bold text-white drop-shadow-lg">Wheelzy</span>
-      </div>
+        <!-- Logo -->
+        <div class="flex items-center space-x-2">
+          <svg class="h-8 w-8 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
+            <circle cx="7" cy="17" r="2"/>
+            <path d="M9 17h6"/>
+            <circle cx="17" cy="17" r="2"/>
+          </svg>
+          <span class="text-2xl font-bold text-white drop-shadow-lg">Wheelzy</span>
+        </div>
 
-      <!-- Nav links -->
-      <div class="flex items-center space-x-6" id="nav-links">
-        <a href="#" class="text-white hover:text-blue-400 font-medium transition">Home</a>
-        <a href="#vehicles" class="text-white hover:text-blue-400 font-medium transition">Vehicles</a>
-        <a href="#about" class="text-white hover:text-blue-400 font-medium transition">About</a>
+        <!-- Nav links -->
+        <div class="flex items-center space-x-6" id="nav-links">
+          <a href="#" class="text-white hover:text-blue-400 font-medium transition">Home</a>
+          <a href="#vehicles" class="text-white hover:text-blue-400 font-medium transition">Vehicles</a>
+          <a href="#about" class="text-white hover:text-blue-400 font-medium transition">About</a>
 
-        <!-- Auth buttons -->
-        <a id="login-btn" href="./login.html"
-          class="px-4 py-2 text-white border border-white/50 rounded-lg hover:bg-white/20 transition">
-          Login
-        </a>
-        <a id="signup-btn" href="./signup.html"
-          class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
-          Sign Up
-        </a>
+          <!-- ✅ Added Requests link -->
+          <a href="./requests.html" class="text-white hover:text-blue-400 font-medium transition">Messages</a>
+
+          <!-- Auth buttons -->
+          <a id="login-btn" href="./login.html"
+            class="px-4 py-2 text-white border border-white/50 rounded-lg hover:bg-white/20 transition">
+            Login
+          </a>
+          <a id="signup-btn" href="./signup.html"
+            class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+            Sign Up
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- Hero Section -->
   <section class="relative h-[90vh] flex items-center justify-center text-center text-white">
@@ -100,7 +103,7 @@
     </div>
   </section>
 
-    <!-- Vehicle Listings -->
+  <!-- Vehicle Listings -->
   <main id="vehicles" class="container mx-auto px-6 py-12">
     <div class="mb-10 text-center">
       <h2 class="text-4xl font-bold mb-2">Available Vehicles</h2>
@@ -120,10 +123,10 @@
   </main>
 
   <script>
-
     function handleSellClick() {
       window.location.href = "./add-vehicle.html";
     }
+
     window.addEventListener('DOMContentLoaded', async () => {
       loadVehicles();
       const token = localStorage.getItem('token');
@@ -160,14 +163,12 @@
           console.warn("Token invalid or expired:", err.response?.data || err.message);
           localStorage.removeItem("token");
 
-          // ❌ Not logged in → redirect to login
           addVehicleBtn.innerText = "Login to Sell Vehicle";
           addVehicleBtn.onclick = () => {
             window.location.href = "./login.html";
           };
         }
       } else {
-        // ❌ No token → redirect to login
         addVehicleBtn.innerText = "Login to Add Vehicle";
         addVehicleBtn.onclick = () => {
           window.location.href = "./login.html";
@@ -209,9 +210,8 @@
               </div>
             `;
 
-            // redirect on click
             card.addEventListener("click", () => {
-              window.location.href = `./vehicle-details.html?id=${vehicle.vehicle_id  }`;
+              window.location.href = `./vehicle-details.html?id=${vehicle.vehicle_id}`;
             });
 
             grid.appendChild(card);
@@ -227,7 +227,6 @@
         `;
       }
     }
-
   </script>
 </body>
 </html>
