--- a/client/index.html
+++ b/client/index.html
@@ -10,44 +10,48 @@
 <body class="bg-gray-50 text-gray-900">
 
   <!-- Navbar -->
-  <nav class="absolute top-0 left-0 w-full z-20 bg-white/10 backdrop-blur-md border-b border-white/20">
-    <div class="container mx-auto px-6">
-      <div class="flex justify-between items-center h-16">
+<nav class="absolute top-0 left-0 w-full z-20 bg-white/10 backdrop-blur-md border-b border-white/20">
+  <div class="container mx-auto px-6">
+    <div class="flex justify-between items-center h-16">
 
-        <!-- Logo -->
-        <div class="flex items-center space-x-2">
-          <svg class="h-8 w-8 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none"
-            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-            <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
-            <circle cx="7" cy="17" r="2"/>
-            <path d="M9 17h6"/>
-            <circle cx="17" cy="17" r="2"/>
-          </svg>
-          <span class="text-2xl font-bold text-white drop-shadow-lg">Wheelzy</span>
-        </div>
+      <!-- Logo -->
+      <div class="flex items-center space-x-2">
+        <svg class="h-8 w-8 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none"
+          viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"/>
+          <circle cx="7" cy="17" r="2"/>
+          <path d="M9 17h6"/>
+          <circle cx="17" cy="17" r="2"/>
+        </svg>
+        <span class="text-2xl font-bold text-white drop-shadow-lg">Wheelzy</span>
+      </div>
 
-        <!-- Nav links -->
-        <div class="flex items-center space-x-6" id="nav-links">
-          <a href="#" class="text-white hover:text-blue-400 font-medium transition">Home</a>
-          <a href="#vehicles" class="text-white hover:text-blue-400 font-medium transition">Vehicles</a>
-          <a href="#about" class="text-white hover:text-blue-400 font-medium transition">About</a>
+      <!-- Nav links -->
+      <div class="flex items-center space-x-6" id="nav-links">
+        <a href="#" class="text-white hover:text-blue-400 font-medium transition">Home</a>
+        <a href="#vehicles" class="text-white hover:text-blue-400 font-medium transition">Vehicles</a>
+        <a href="#about" class="text-white hover:text-blue-400 font-medium transition">About</a>
+        <a href="./requests.html" class="text-white hover:text-blue-400 font-medium transition">Messages</a>
 
-          <!-- ✅ Added Requests link -->
-          <a href="./requests.html" class="text-white hover:text-blue-400 font-medium transition">Messages</a>
+        <!-- ✅ My Vehicles -->
+        <button id="my-vehicles-btn" 
+          class="text-white hover:text-blue-400 font-medium transition">
+          My Listings
+        </button>
 
-          <!-- Auth buttons -->
-          <a id="login-btn" href="./login.html"
-            class="px-4 py-2 text-white border border-white/50 rounded-lg hover:bg-white/20 transition">
-            Login
-          </a>
-          <a id="signup-btn" href="./signup.html"
-            class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
-            Sign Up
-          </a>
-        </div>
+        <!-- Auth buttons -->
+        <a id="login-btn" href="./login.html"
+          class="px-4 py-2 text-white border border-white/50 rounded-lg hover:bg-white/20 transition">
+          Login
+        </a>
+        <a id="signup-btn" href="./signup.html"
+          class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+          Sign Up
+        </a>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Hero Section -->
   <section class="relative h-[90vh] flex items-center justify-center text-center text-white">
@@ -177,56 +181,94 @@
     });
 
     async function loadVehicles() {
-      try {
-        const res = await axios.get("http://localhost:5000/api/vehicles");
-        if (res.data.success) {
-          const vehicles = res.data.data;
-          const grid = document.getElementById("vehicle-grid");
-          grid.innerHTML = "";
-
-          if (!vehicles || vehicles.length === 0) {
-            grid.innerHTML = `
-              <div class="col-span-full text-center text-gray-300 text-lg py-10">
-                🚗 No vehicles found
-              </div>
-            `;
-            return;
-          }
-
-          vehicles.forEach(vehicle => {
-            const card = document.createElement("div");
-            card.className =
-              "bg-white/10 backdrop-blur-md rounded-xl shadow-lg overflow-hidden hover:scale-105 transform transition cursor-pointer";
-
-            card.innerHTML = `
-              <img src="${vehicle.image || './placeholder-car.jpg'}" 
-                  alt="${vehicle.title}" 
-                  class="w-full h-48 object-cover" />
-
-              <div class="p-4">
-                <h3 class="text-xl font-semibold text-red-600">${vehicle.title} : ${vehicle.year}</h3>
-                <p class="text-gray-600">${vehicle.description}</p>
-                <p class="text-blue-600 font-bold mt-2">₹ ${vehicle.price.toLocaleString()}</p>
-              </div>
-            `;
-
-            card.addEventListener("click", () => {
-              window.location.href = `./vehicle-details.html?id=${vehicle.vehicle_id}`;
-            });
-
-            grid.appendChild(card);
-          });
-        }
-      } catch (err) {
-        console.error("Error fetching vehicles:", err);
+    try {
+      const res = await axios.get("http://localhost:5000/api/vehicles");
+      if (res.data.success) {
+        const vehicles = res.data.data;
         const grid = document.getElementById("vehicle-grid");
-        grid.innerHTML = `
-          <div class="col-span-full text-center text-red-400 text-lg py-10">
-            ⚠️ Failed to load vehicles
-          </div>
-        `;
+        grid.innerHTML = "";
+
+        if (!vehicles || vehicles.length === 0) {
+          grid.innerHTML = `
+            <div class="col-span-full text-center text-gray-300 text-lg py-10">
+              🚗 No vehicles found
+            </div>
+          `;
+          return;
+        }
+
+        vehicles.forEach(vehicle => {
+          const card = document.createElement("div");
+          card.className =
+            "bg-white/10 backdrop-blur-md rounded-xl shadow-lg overflow-hidden hover:scale-105 transform transition cursor-pointer";
+
+          card.innerHTML = `
+            <img src="${vehicle.image || './placeholder-car.jpg'}" 
+                alt="${vehicle.title}" 
+                class="w-full h-48 object-cover" />
+
+            <div class="p-4">
+              <h3 class="text-xl font-semibold text-red-600">${vehicle.title} : ${vehicle.year}</h3>
+              <p class="text-gray-600">${vehicle.description || ""}</p>
+              <p class="text-blue-600 font-bold mt-2">₹ ${vehicle.price.toLocaleString()}</p>
+
+              <!-- ✅ Vehicle Status -->
+              <p class="mt-2 font-medium ${
+                vehicle.status === "available" 
+                  ? "text-green-600" 
+                  : "text-red-600"
+              }">
+                Status : ${vehicle.status}
+              </p>
+            </div>
+          `;
+
+          card.addEventListener("click", () => {
+            window.location.href = `./vehicle-details.html?id=${vehicle.vehicle_id}`;
+          });
+
+          grid.appendChild(card);
+        });
       }
+    } catch (err) {
+      console.error("Error fetching vehicles:", err);
+      const grid = document.getElementById("vehicle-grid");
+      grid.innerHTML = `
+        <div class="col-span-full text-center text-red-400 text-lg py-10">
+          ⚠️ Failed to load vehicles
+        </div>
+      `;
     }
+  }
+
+    // My Vehicles button logic
+document.getElementById("my-vehicles-btn").addEventListener("click", async () => {
+  const token = localStorage.getItem("token");
+  if (!token) {
+    alert("Please login to view your vehicles.");
+    window.location.href = "./login.html";
+    return;
+  }
+
+  try {
+    const res = await axios.get("http://localhost:5000/api/auth/verifytoken", {
+      headers: { Authorization: `Bearer ${token}` }
+    });
+
+    if (res.data.success) {
+      window.location.href = "./my-listings.html";
+    } else {
+      alert("Session expired. Please login again.");
+      localStorage.removeItem("token");
+      window.location.href = "./login.html";
+    }
+  } catch (err) {
+    console.error("Token verification failed:", err.response?.data || err.message);
+    alert("Session expired. Please login again.");
+    localStorage.removeItem("token");
+    window.location.href = "./login.html";
+  }
+});
   </script>
 </body>
 </html>
