--- a/client/vehicle-details.html
+++ b/client/vehicle-details.html
@@ -81,7 +81,7 @@
 
         const v = res.data.data;
         document.getElementById("detailsContent").innerHTML = `
-          <img src="${v.image || './placeholder-car.jpg'}" 
+          <img src="${v.image || './placeholder2.webp'}" 
               alt="${v.title}" 
               class="w-full h-64 object-cover rounded-lg shadow-lg" />
 
