--- a/client/profile.html
+++ b/client/profile.html
@@ -186,7 +186,8 @@
         const card = document.createElement("div");
         card.className = "bg-green-900/20 rounded-lg p-4 shadow-md hover:scale-105 transform transition flex flex-col";
         card.innerHTML = `
-          <img src="${r.image}" class="rounded-lg mb-2"/>
+          <img src="${r.image || "./placeholder2.webp"}" 
+              class="w-full h-48 object-cover rounded-lg mb-2"/>
           <h4 class="text-lg font-bold text-white">${r.title}</h4>
           <p class="text-gray-300">${r.year} • ₹${r.price}</p>
           <p class="text-white">${r.description}</p>
@@ -195,8 +196,12 @@
           <hr class="my-2 border-gray-600"/>
           <p class="text-sm text-yellow-300"><strong>Message:</strong> ${r.message}</p>
           <p class="text-sm text-blue-300"><strong>Contact:</strong> ${r.contact}</p>
-          <button onclick="deleteRequest(${r.request_id})" class="mt-3 bg-red-600 text-white rounded-lg px-3 py-1 hover:bg-red-700">Delete</button>
+          <button onclick="deleteRequest(${r.request_id})" 
+                  class="mt-3 bg-red-600 text-white rounded-lg px-3 py-1 hover:bg-red-700">
+                  Delete
+          </button>
         `;
+
         container.appendChild(card);
       });
     }
